:package:  update stylelint, support config overrides

--- a/__files__/miniprogram.wxss
+++ b/__files__/miniprogram.wxss
@@ -20,11 +20,11 @@ open-data {
   background-color: #ededed;
 }
 
-.hoverClass {
+.hover-class {
   opacity: 0.8;
 }
 
-.placeholderClass {
+.placeholder-class {
   color: #888;
 }
 
